Commit Before Capstones

--- a/app/assets/stylesheets/important_persons.css.scss
+++ b/app/assets/stylesheets/important_persons.css.scss
@@ -306,6 +306,10 @@
   padding-bottom: 40px;
 }
 
+.ip-show-container {
+  padding-bottom: 40px;
+}
+
 .img-responsive-ip-show {
   max-height: 400px;
   max-width: 600px;
