--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,8 +21,8 @@
         </div>
 
         <div class="form-group">
-          <%= f.label :phone_number %><br />
-          <em>(no dashes or 1)</em>
+          <%= f.label :phone_number %>
+          <em>(no dashes or 1)</em><br />
           <%= f.text_field :phone_number %>
         </div>
 
