--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
               <li><a href="/events">Events</a></li>
               <li><a href="/wishlist_items">Wishlists</a></li>
               <li><a href="/messages">Messages</a></li>
+              <li><a href="/events/calendar">Calendar</a></li>
               <li class="dropdown">
                 <a href="/users/sign_out" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Profile</a>
                 <ul class="dropdown-menu">
