--- a/app/views/wishlist_items/new.html.erb
+++ b/app/views/wishlist_items/new.html.erb
@@ -35,7 +35,7 @@
 
       <div class="col-md-6 col-sm-6" id="wishlist-form-favorite">
         <%= label_tag :favorite %>
-        <%= check_box_tag :favorite, '', :id => "wishlist-form-favorite-field" %>
+        <%= check_box_tag :favorite, 1, false, disabled: false, :id => "wishlist-form-favorite-field" %>
       </div>
 
       <div class="col-md-12 col-sm-12" id="wishlist-form-submit">
