--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,10 +1,10 @@
 <div class="simple-calendar">
-  <%= link_to "Previous", url_for(params.merge(start_date: date_range.first - 1.day)) %>
-  <%= I18n.t("date.month_names")[start_date.month] %> <%= start_date.year %>
-  <%= link_to "Next", url_for(params.merge(start_date: date_range.last + 1.day))  %>
+  <p><%= link_to "Previous", url_for(params.merge(start_date: date_range.first - 1.day)) %> &nbsp
+  <%= I18n.t("date.month_names")[start_date.month] %> <%= start_date.year %> &nbsp
+  <%= link_to "Next", url_for(params.merge(start_date: date_range.last + 1.day))  %></p>
 
   <table class="table table-striped">
-    <thead>
+    <thead class="days">
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
           <th><%= I18n.t("date.abbr_day_names")[day.wday] %></th>
@@ -12,7 +12,7 @@
       </tr>
     </thead>
 
-    <tbody>
+    <tbody class="dates">
       <% date_range.each_slice(7) do |week| %>
         <tr>
           <% week.each do |day| %>
